--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,8 @@
 
     </style>
 
+    <style name="ThemeOverlay.UserList" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="colorSecondary">@color/teal_700</item>
+    </style>
+
 </resources>
