--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
     <style name="Widget.UserList.SmallHeadLineText" parent="TextAppearance.UserList.Headline6">
         <item name="android:textColor">@color/comet</item>
     </style>
+
+
+
+    <style name="Widget.UserList.HorizontalProgress" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:theme">@style/ThemeOverlay.UserList</item>
+    </style>
 </resources>
